# SmallExpertSystem

./: CMakeLists.txt  LICENSE.md  README.md
Forms/: CMakeLists.txt  MainWindowController.ui  StatusLayoutController.ui  style.css
Headers/: CMakeLists.txt  KnowledgeBaseController.h  KnowledgeBaseProcessingStatus.h  MainWindowController.h  Outcome.h  StatusLayoutController.h
Icons/: mainIcon.rc
Interfaces/: CMakeLists.txt  MainWindowController.ui
Sources/: CMakeLists.txt  KnowledgeBaseController.cpp  MainWindowController.cpp  Outcome.cpp  StatusLayoutController.cpp  main.cpp
